# Enterprise-Agentic-Knowledge-Intelligence-Platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/agents/: workflow.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py
backend/app/evals/: runner.py
backend/app/schemas/: api.py
backend/app/scripts/: seed.py
backend/app/services/: audit.py  documents.py  providers.py  rag.py  rate_limit.py
backend/tests/: test_api_contract.py  test_core.py  test_real_evals.py
demo-data/: agentic-ai-governance-notes.md  ai-research-paper-summary.md  company-annual-report-ai-investment.md  company-annual-report-ai-risk.md  eval-annual-report.jsonl  eval-research.jsonl  rag-limitations-research-notes.md
docs/: api.md  architecture.md  database.md  demo-script.md  evaluation.md  future-deployment-plan.md  future-supabase-plan.md  local-development.md  openai-token-plan.md  security.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/documents/: page.tsx
frontend/components/: AppShell.tsx  ui.tsx
frontend/lib/: api.ts
frontend/types/: api.ts
scripts/: run-openai-integration.ps1  smoke-test.ps1
(+6 files in other folders)
