[project]
name = "enterprise-agentic-knowledge-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.3",
  "bcrypt<5",
  "fastapi>=0.115.0",
  "email-validator>=2.2.0",
  "httpx>=0.27.2",
  "langgraph>=0.2.35",
  "pgvector>=0.3.6",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.5.2",
  "pypdf>=5.0.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.12",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.8",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
strict = false
